<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Interface.CrudVolumeActivity"
    tools:showIn="@layout/activity_crud_volume">

    <TextView
        android:id="@+id/lbl_h1_caracteristicas_volume"
        style="@style/AppTheme.h1_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_caracteristicas"
        app:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="160dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lbl_h1_caracteristicas_volume"
        app:layout_constraintStart_toStartOf="@+id/lbl_h1_caracteristicas_volume"
        app:layout_constraintTop_toBottomOf="@+id/lbl_h1_caracteristicas_volume">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_titulo"
                style="@style/AppTheme.lbl_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lbl_titulo_volume" />

            <EditText
                android:id="@+id/txt_titulo"
                style="@style/AppTheme.txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:enabled="false"
                android:hint="@string/hint_txt_pesquisa_titulo"
                android:inputType="textPersonName"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lbl_num"
                style="@style/AppTheme.lbl_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lbl_numero_volume" />

            <EditText
                android:id="@+id/txt_num"
                style="@style/AppTheme.txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                tools:targetApi="o" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/lbl_nome"
                style="@style/AppTheme.lbl_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lbl_nome_titulo" />

            <EditText
                android:id="@+id/txt_nome"
                style="@style/AppTheme.txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint_txt_nome_volume"
                android:inputType="textPersonName"
                tools:targetApi="o" />
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>