<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Interface.ConverterActivity"
    tools:showIn="@layout/activity_converter">

    <TextView
        android:id="@+id/lbl_h1_exportar_titulo"
        style="@style/AppTheme.h1_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_exportar_importar"
        app:fontFamily="@font/poppins_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnImportar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/formato_botao_azul"
        android:text="@string/lbl_btn_importar"
        app:layout_constraintEnd_toEndOf="@+id/lbl_h1_exportar_titulo"
        app:layout_constraintStart_toStartOf="@+id/lbl_h1_exportar_titulo"
        app:layout_constraintTop_toBottomOf="@+id/lbl_h1_exportar_titulo" />

    <Button
        android:id="@+id/btnExportar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/formato_botao_foam"
        android:text="@string/lbl_btn_exportar"
        app:layout_constraintEnd_toEndOf="@+id/btnImportar"
        app:layout_constraintStart_toStartOf="@+id/btnImportar"
        app:layout_constraintTop_toBottomOf="@+id/btnImportar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/txtMensagem"
        app:layout_constraintStart_toStartOf="@+id/txtMensagem"
        app:layout_constraintTop_toBottomOf="@+id/txtMensagem" />

    <TextView
        android:id="@+id/txtMensagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text=""
        style="@style/AppTheme.lbl_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExportar" />
</android.support.constraint.ConstraintLayout>